- Fixed bug #23682 (sybase_query() and multiple result sets: not returning first row set)